[package]
name = "cloudflare"
version = "0.1.0"
authors = ["Mackenzie Hauck <mhauck@live.ca>"]

[dependencies]
reqwest = "0.9.8"
serde = "1.0.84"
serde_derive = "1.0.84"
url = "1.7.2"
serde_json = "1.0.35"
log = "0.4.6"

[dev-dependencies]
dotenv = "0.13.0"
lazy_static = "1.2.0"
env_logger = "0.6.0"
